Added images to main page

--- a/Views/mylayout.erb
+++ b/Views/mylayout.erb
@@ -6,6 +6,12 @@
     </head>
     <body>
         <%= yield %>
+
+        <img src="/Public/Images/lokta.jpg" height="328" width="328">
+        <img src='/Public/Images/marble.jpg' height="328" width="328">
+        <img src='/Public/Images/natural.jpg' height="328" width="328">
+        <img src='/Public/Images/washi.jpg' height="328" width="328">
+
         <script src="/Public/main.js"></script>
     </body>
 </html>
