"made minor changes to CSS"

--- a/Views/mylayout.erb
+++ b/Views/mylayout.erb
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="/Public/main.css">
     </head>
     <body>
+    <div id="right"></div>
         <%= yield %>
 
         <img src="/Public/Images/lokta.jpg" height="328" width="328">
