--- a/Views/mylayout.erb
+++ b/Views/mylayout.erb
@@ -7,12 +7,12 @@
     <body>
     <div id="right"></div>
         <%= yield %>
-
+        <div>
         <img src="/Public/Images/lokta.jpg" height="328" width="328">
         <img src='/Public/Images/marble.jpg' height="328" width="328">
         <img src='/Public/Images/natural.jpg' height="328" width="328">
         <img src='/Public/Images/washi.jpg' height="328" width="328">
-
+        </div>
         <script src="/Public/main.js"></script>
     </body>
 </html>
